# acutis

./: .build.yml  .gitignore  .ocamlformat  CHANGELOG.md  Makefile  README.md  acutis.d.ts  acutis.iife.min.js  acutis.iife.min.js.map  acutis.js  acutis.js.map  acutis.mjs.map  acutis.ml  acutis.mli  acutis.opam  acutis_cli.ml  acutis_cli.opam  acutis_data_js.opam  acutis_data_json.opam  acutis_js.ml  acutis_js.opam  acutis_json.opam  bsconfig.json  cli  dune  dune-project  eleventy.js  index.html  jest-snapshot-resolver.js  jest.config.js  node-utils.js  package-lock.json  package.json  package_json.ml  playground.js  playground.js.map  rollup.config.js  style.css  tmp.acutis
__tests__/: Ast_Test.res  Error_Test.res  Error_Test.resi  JS_tests.js  Matching_Error_Test.res  Matching_Test.res  Pattern_Test.res  Pattern_Test.resi  Render_Test.res  Render_Test.resi  TypeChecker_Test.res  Typechecker_Test.res  Utilities_Test.res  cli_tests.js
api/: index.html  sherlodoc.js
cli_test_fixtures/: A.acutis  D.mjs  D_async.mjs  bb.js  bb_async.js  data.json  layout.acutis  layout_async.acutis
credits/: index.html
development/: index.html
docs/: .eleventy.js  .gitignore  api.md  credits.md  development.md  draft.md  eleventy.config.js  eleventyAcutis.js  index.md  introduction.md  license.md  manual.md  package-lock.json  package.json  playground.acutis  playground.js  postcss.config.js  style.11ty.js  style.css
introduction/: index.html
js/: acutis_js.ml  dataJs.ml  dataJs.mli  dune
lib/: ast.ml  ast.mli  compile.ml  compile.mli  dagmap.ml  dagmap.mli  data.ml  data.mli  dataJs.mli  dataJson.ml  dataJson.mli  dataYojson.ml  dataYojson.mli  debugAst.ml  debugAst.mli  debugMatching.ml  debugMatching.mli  dune  error.ml  error.mli  instruct.ml  lexer.mli  lexer.mll  loc.ml  loc.mli  map.ml  matching.ml  matching.mli  nonempty.ml  nonempty.mli  parser.messages  parser.mly  parserMessages.mli  pp.ml  pp.mli  printJs.ml  printJs.mli  render.ml  render.mli  set.ml  (+10 more)
lib/data-js/: data.ml  data.mli  dune
lib/data-json/: data.ml  data.mli  dune
lib/es6/src/: AcutisJs.mjs  Compile.mjs  Data.mjs  Debug.mjs  Lexer.mjs  Matching.mjs  NonEmpty.mjs  Parser.mjs  Render.mjs  Result.mjs  Source.mjs  Typechecker.mjs  Typescheme.mjs  Utils.mjs
lib/js/src/: AcutisJs.js  Compile.js  Data.js  Debug.js  Lexer.js  Matching.js  NonEmpty.js  Parser.js  Render.js  Result.js  Source.js  Typechecker.js  Typescheme.js  Utils.js
license/: index.html
manual/: index.html
ocaml/acutis/: Makefile  acutis.opam  dune-project
ocaml/acutis/lib/: ast.ml  ast.mli  compile.ml  compile.mli  dagmap.ml  dagmap.mli  data.ml  data.mli  dataJs.ml  dataJs.mli  dataYojson.ml  dataYojson.mli  dune  error.ml  error.mli  lexer.mli  lexer.mll  loc.mli  map.ml  matching.ml  matching.mli  nonempty.ml  nonempty.mli  parser.mly  pp.ml  pp.mli  render.ml  render.mli  set.ml  source.ml  stdlibExtra.ml  stdlibExtra.mli  sync.ml  sync.mli  typechecker.ml  typechecker.mli  typescheme.ml  typescheme.mli  utils.ml  utils.mli
ocaml/acutis/test/: data_test.ml  dune  error_test.ml  lwt_test.ml  matching_test.ml  parser_test.ml  render_test.ml  typechecker_test.ml
playground/: index.html
src/: AcutisJs.res  Acutis_Types.res  Compile.res  Compile.resi  Compile2.res  Compile2.resi  Data.res  Data.resi  Debug.res  Debug.resi  Debug2.res  Deprecated_Environment.res  Deprecated_Environment.resi  Deprecated_Render.res  Deprecated_Render.resi  Environment.res  Environment.resi  Lexer.res  (+36 more)
test/: cli.t  data_test.ml  dune  error_test.expected  error_test.ml  lwt_test.ml  matching_test.ml  parser_test.ml  render_test.expected  render_test.ml  typechecker_test.ml
test/async-test.t/: index.js  run.js  run.t  template.acutis
test/cli.t/: a.acutis  data.json  layout.acutis  run.t
test/data-test.t/: acutis.js  data.json  encode.acutis  run.js  run.t  template.acutis  unknowns.acutis
test/matching-test.t/: basic.acutis  basic_decision_tree.acutis  big_list.acutis  dicts.acutis  diff_size_lists.acutis  merge_nests.acutis  record_field_sort.acutis  record_fields_expand.acutis  run.t  sorting.acutis  wildcard_merge_after_nest.acutis
test/parse-test.t/: comments.acutis  component.acutis  echoes.acutis  edge_cases.acutis  interface.acutis  interface.js  map_dict.acutis  map_list.acutis  matches.acutis  numbers.acutis  patterns.acutis  precedence.acutis  run.t  template.acutis  trim.acutis
test/printjs/: dune  printjs_example.acutis  printjs_example.compiled.mjs
test/printjs/esm-cjs.t/: run.t  template.acutis
test/printjs/printjs-error.t/: run.t  template.acutis
test/printjs/printjs.t/: component.acutis  jscomponents.mjs  nestedComponent.acutis  run.t  stringify_interface  template.acutis  unused.acutis
test/render-test.t/: component_tests.acutis  constructing.acutis  constructing.json  dicts.acutis  echoes.acutis  echoes.json  map.acutis  map.json  nullables.acutis  nullables.json  other.acutis  other.json  run.t  tagged_unions.acutis  tagged_unions.json  whitespace_control.acutis  whitespace_control.json
test/render-test.t/components/: dependencyA.acutis  dependencyB.acutis  nullProps.acutis  nullPropsDefault.acutis  ohHai.acutis  passthroughChild.acutis  passthroughChildNest.acutis  passthroughChildNestPun.acutis
test/tojs/: dune  tojs_error.expected  tojs_error.ml  tojs_error_run.mjs  tojs_example.expected.html  tojs_example_compiled.mjs  tojs_example_run.mjs  tojs_example_test.expected.mjs  tojs_example_test.ml  tojs_main.expected  tojs_main_run.mjs  tojs_main_test.expected.mjs  tojs_main_test.ml
test/tojs/esm-cjs.t/: external_interface  run.t
test/tojs/tojs-error.t/: run.t  template.acutis
test/tojs/tojs.t/: jscomponents.mjs  run.t  template.acutis
test/typechecker-test.t/: boolean.acutis  component_a.acutis  components.acutis  context.acutis  echoes.acutis  enum_closed.acutis  enum_open.acutis  interface.acutis  narrowing.acutis  nested.acutis  nullables.acutis  other.acutis  pathologic_enum.acutis  prettyprint.acutis  record_fields.acutis  run.t  union_boolean.acutis  union_closed.acutis  union_open.acutis
(+189 files in other folders)
