(executable
 (name package_json))

(rule
 (target package.json)
 (deps README.md LICENSE)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:package_json.exe}
    --version
    %{version:acutis}
    --main
    %{dep:js/acutis_js.bc.js}
    --files
    %{dep:eleventy.js}))))

; Our docs folder contains symlinks to our Dune build folder, but otherwise uses
; a completely different build system. It's easier to just manage it separately.
; We need to exclude it so as not to confuse Dune.

(dirs :standard \ docs)
