(library
 (public_name acutis)
 (modules acutis)
 (libraries acutis.internals))

(executable
 (name acutis_cli)
 (public_name acutis)
 (modules acutis_cli)
 (package acutis)
 (libraries unix acutis yojson dune-build-info))

(executable
 (name acutis_js)
 (modules acutis_js)
 (modes js)
 (libraries acutis)
 (js_of_ocaml
  (flags
   (--enable effects)
   (--disable excwrap))
  ; excwrap breaks the Eleventy plugin.
  ; Dune's dev profile needs this flag in build_runtime_flags.
  (build_runtime_flags
   (--disable excwrap)))
 (preprocess
  (pps js_of_ocaml-ppx)))

(executable
 (name package_json)
 (modules package_json))

(rule
 (target package.json)
 (deps README.md LICENSE)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:package_json.exe}
    --version
    %{version:acutis}
    --main
    %{dep:acutis_js.bc.js}
    --files
    %{dep:eleventy.js}))))

; Our docs folder contains symlinks to our Dune build folder, but otherwise uses
; a completely different build system. It's easier to just manage it separately.
; We need to exclude it so as not to confuse Dune.

(dirs :standard \ docs)
