(lang dune 3.1)

(name acutis)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name acutis)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   (ocaml (>= 4.14))
   dune
   odoc
   yojson
   js_of_ocaml
   js_of_ocaml-compiler
   js_of_ocaml-ppx
   ppx_deriving
   menhir
   (promise_jsoo :build)
   (alcotest :with-test)
   (alcotest-lwt :with-test)
   (lwt :with-test))
 (tags
  (topics "to describe" your project))
 (allow_empty))

(using menhir 2.1)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
