(lang dune 3.1)

(name acutis)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license MPL-2.0)

(documentation https://url/to/documentation)

(package
 (name acutis)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   (ocaml (>= 4.14))
   (dune (>= 3.0))
   (ocamlformat (= 0.22.4))
   (odoc (>= 2.1))
   (yojson (>= 2.0))
   (js_of_ocaml (>= 4.0))
   (js_of_ocaml-compiler (>= 4.0))
   (js_of_ocaml-ppx (>= 4.0))
   (ppx_deriving (>= 5.2.1))
   (menhir (= 20220210))
   (promise_jsoo (>= 0.3.1 :build))
   (alcotest (>= 1.5 :with-test))
   (alcotest-lwt (>= 1.5 :with-test))
   (lwt (>= 5.5 :with-test)))
 (tags
  (topics "to describe" your project))
 (allow_empty))

(using menhir 2.1)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
