(cram
 (deps %{bin:acutis}))

; Basic example file

(rule ; Generate the compiled JS.
 (target tojs_example.compiled.output)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:acutis} --mode js %{dep:tojs_example.acutis}))))

(rule ; Diff the compiled JS.
 (alias runtest)
 (action
  (diff %{dep:tojs_example_compiled.mjs} %{dep:tojs_example_compiled.output})))
