(cram
 (deps %{bin:acutis}))

; Basic example file

(rule ; Generate the compiled JS.
 (target printjs_example.compiled.output)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:acutis} --mode js %{dep:printjs_example.acutis}))))

(rule ; Diff the compiled JS.
 (alias runtest)
 (action
  (diff
   %{dep:printjs_example.compiled.mjs}
   %{dep:printjs_example.compiled.output})))
